Try to support JDK >= 9.